# cpp4fun

./: .gitignore  CMakeLists.txt  README.md  ci_test_example.sh  conanfile.txt
src/: CMakeLists.txt  myproject.cpp
src/complex/: CMakeLists.txt  README.md  main.cu
src/cpp4fun/: CMakeLists.txt  main.cpp  main.cu
src/cudaGL/: CMakeLists.txt  Renderer.cpp  Renderer.h  main.cpp  main.cu
src/curand3d/: CMakeLists.txt  Camera.h  CudaGLBuffer.h  GlfwWindow.h  Shader.h  Sphere.h  main.cu
src/curand4fun/: CMakeLists.txt  main.cu
src/fractal/: README.txt  main.cu
src/imgui4fun/: CMakeLists.txt  main.cpp
src/microscope/: CMakeLists.txt  main.cu
src/particles/: CMakeLists.txt
src/pde/: CMakeLists.txt  main.cu
src/quantum/: CMakeLists.txt  main.cu
src/rnd_complex/: CMakeLists.txt  main.cu
src/rnd_fractal/: CMakeLists.txt  main.cu
src/starfield/: CMakeLists.txt  main.cu
test/: test_main.cpp
tests/: CMakeLists.txt  test.cpp
